# src/app/modules/auth-module/features/sign-in-screen/data/model/sign-in.model.ts
@@ -6,6 +6,8 @@ export interface SignInModel {
   code: string;
   role: UserRole;
   group: string;
+  teamId?: number | null;
+  headedTeamIds?: number[];
   token: string;
   permissions: string[];
   notifications: number;
